--- a/HeThongHoTroCuocThi/src/main/resources/application.properties
+++ b/HeThongHoTroCuocThi/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=HeThongHoTroCuocThi
 # Database connection properties
 spring.datasource.url=jdbc:mysql://localhost:3306/HeThongHoTroCuocThi
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
