--- a/HeThongHoTroCuocThi/pom.xml
+++ b/HeThongHoTroCuocThi/pom.xml
@@ -96,6 +96,12 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<!--Thu vien ve bieu do-->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
